@@ -4,7 +4,7 @@ comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more
 end_comment
 
 begin_package
-DECL|package|org.apache.solr.request
+DECL|package|org.apache.solr.response
 package|package
 name|org
 operator|.
@@ -12,7 +12,7 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|request
+name|response
 package|;
 end_package
 
@@ -150,9 +150,9 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|response
+name|request
 operator|.
-name|BinaryQueryResponseWriter
+name|LocalSolrQueryRequest
 import|;
 end_import
 
@@ -169,20 +169,6 @@ operator|.
 name|BinaryResponseWriter
 operator|.
 name|Resolver
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|response
-operator|.
-name|SolrQueryResponse
 import|;
 end_import
 
@@ -225,12 +211,10 @@ import|;
 end_import
 
 begin_comment
-comment|/**  * Test for BinaryResponseWriter  * @Deprecated use {@link org.apache.solr.response.TestBinaryResponseWriter} instead.  *  * @since solr 1.4  */
+comment|/**  * Test for BinaryResponseWriter  *  *  * @since solr 1.4  */
 end_comment
 
 begin_class
-annotation|@
-name|Deprecated
 DECL|class|TestBinaryResponseWriter
 specifier|public
 class|class
